[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/recipe_slot.png" type="Texture" id=1]
[ext_resource path="res://Assets/Items/copper_plate.png" type="Texture" id=2]
[ext_resource path="res://src/UI/RecipeDisplay.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Control" type="Control"]
anchor_right = 0.094
anchor_bottom = 0.03
margin_right = -0.256004
size_flags_horizontal = 0
size_flags_vertical = 9
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 96.0
margin_bottom = 18.0
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 1.0
margin_right = 96.0
margin_bottom = 17.0
custom_constants/separation = 0

[node name="Item1" type="TextureRect" parent="HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 16.0
margin_right = 23.0
margin_bottom = 16.0
custom_constants/separation = 7
custom_styles/separator = SubResource( 1 )

[node name="Item2" type="TextureRect" parent="HBoxContainer"]
margin_left = 23.0
margin_right = 39.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 39.0
margin_right = 46.0
margin_bottom = 16.0
custom_constants/separation = 7
custom_styles/separator = SubResource( 1 )

[node name="Item3" type="TextureRect" parent="HBoxContainer"]
margin_left = 46.0
margin_right = 62.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_left = 62.0
margin_right = 73.0
margin_bottom = 16.0
custom_constants/separation = 11
custom_styles/separator = SubResource( 1 )

[node name="Result" type="TextureRect" parent="HBoxContainer"]
margin_left = 73.0
margin_right = 89.0
margin_bottom = 16.0
texture = ExtResource( 2 )
